[gd_scene load_steps=8 format=2]

[ext_resource path="res://Item/coin/coin_1.png" type="Texture" id=1]
[ext_resource path="res://Item/coin/coin_2.png" type="Texture" id=2]
[ext_resource path="res://Item/coin/coin_3.png" type="Texture" id=3]
[ext_resource path="res://Item/coin/coin_4.png" type="Texture" id=4]
[ext_resource path="res://Item/ItemCollect.gd" type="Script" id=5]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ) ],
"loop": true,
"name": "animate",
"speed": 10.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 4.48358

[node name="Coin" type="Area2D"]
scale = Vector2( 1.5, 1.5 )
collision_mask = 0
script = ExtResource( 5 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "animate"
frame = 3
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[connection signal="body_entered" from="." to="." method="_on_Coin_body_entered"]
