[gd_scene load_steps=8 format=2]

[ext_resource path="res://Item/keys/keys_1_3.png" type="Texture" id=1]
[ext_resource path="res://Item/keys/keys_1_4.png" type="Texture" id=2]
[ext_resource path="res://Item/keys/keys_1_1.png" type="Texture" id=3]
[ext_resource path="res://Item/keys/keys_1_2.png" type="Texture" id=4]
[ext_resource path="res://Item/ItemCollect.gd" type="Script" id=5]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 1 ), ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 5.39557, 3.80907 )

[node name="Key" type="Area2D"]
scale = Vector2( 1.5, 1.5 )
script = ExtResource( 5 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
frame = 3
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[connection signal="body_entered" from="." to="." method="_on_Key_body_entered"]
