[gd_scene load_steps=4 format=2]

[ext_resource path="res://Item/sword/sprite_2.png" type="Texture" id=1]
[ext_resource path="res://Item/ItemCollect.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 95.0018, 92.7159 )

[node name="Sword" type="Area2D"]
scale = Vector2( 0.1, 0.1 )
collision_mask = 0
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 18, -4 )
shape = SubResource( 1 )

[connection signal="body_entered" from="." to="." method="_on_Sword_body_entered"]
